yaml-examples/snipeit/snipeit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: snipeit
  name: snipeit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snipeit
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: snipeit
    spec:
      containers:
        - name: snipeit
          image: snipe/snipe-it
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources: { }
          volumeMounts:
            - mountPath: /var/lib/snipeit
              name: data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: snipeit
