yaml-examples/snipeit/snipeit-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: snipeit
  name: snipeit
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: snipeit
